# ffda-oob-state-collector

./: README.md  ffda-oob-state-collector.py  pyproject.toml
contrib/: device-simulator.py
